--- a/flask/templates/bot.html
+++ b/flask/templates/bot.html
@@ -21,7 +21,7 @@
     <div class="container">
     <br/>
     <div class="row">
-        <div class="col-md-8">
+        <div class="col-md-6">
             <div class="chat_window">
                 <div class="top_menu">
                     <div class="title" id="title">GrandPy Bot</div>
@@ -33,7 +33,7 @@
                     </div>
                     <div class="send_message">
                         <div class="icon">
-                            <div onclick='showUserMessage(document.getElementById("msg_input").value, getCurrentTimestamp())' class="text" style="color:black">Send</div>
+                            <div onclick='main(document.getElementById("msg_input").value, getCurrentTimestamp())' class="text" style="color:black">Send</div>
                         </div>
                     </div> 
                 </div>
@@ -50,7 +50,27 @@
             <br />
             <br />
         </div>
-        
+        <div class="col-md-6">
+            <div class="chat_window" style="background-color: white">
+                <div class="top_menu">
+                    <div class="title">Maps</div>
+                </div>
+                    <div class="panel panel-default">
+                        <iframe
+                        id = "googleMap"
+                        width="100%"
+                        height="95%" 
+                        frameborder="0" 
+                        scrolling="no" 
+                        marginheight="0" 
+                        marginwidth="0"
+                        src="https://www.google.com/maps/embed/v1/place?key=AIzaSyDCw811CjAaII4gir05qQkaJIsNBfpW4v8&q=cassis" 
+                        allowfullscreen>
+                        </iframe>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 </body>
 
