--- a/flask/static/css/chat_interface.css
+++ b/flask/static/css/chat_interface.css
@@ -135,7 +135,7 @@ body {
   float: right;
   height: 40px;
   width: 40px;
-  background: url('../img/woman.jpg');
+  background: url('../img/guy.jpg');
   background-size: 40px;
 }
 
