[backend] Add parser

--- a/flask/templates/bot.html
+++ b/flask/templates/bot.html
@@ -29,11 +29,11 @@
                 <ul class="messages"></ul>
                 <div class="bottom_wrapper clearfix">
                     <div class="message_input_wrapper">
-                        <input id="msg_input" class="message_input" placeholder="Say Hi to begin chat..." />
+                            <input id="msg_input" class="message_input" placeholder="Say Hi to begin chat..." />
                     </div>
                     <div class="send_message">
-                        <div class="icon">
-                            <div onclick='main(document.getElementById("msg_input").value, getCurrentTimestamp())' class="text" style="color:black">Send</div>
+                        <div class="icon" onclick='main(document.getElementById("msg_input").value, getCurrentTimestamp())'>
+                            <div class="text" style="color:black">Send</div>
                         </div>
                     </div> 
                 </div>
