[backend] Replace JS logic backend by python

--- a/flask/static/css/chat_interface.css
+++ b/flask/static/css/chat_interface.css
@@ -209,7 +209,7 @@ body {
   height: 50px;
   border-radius: 25px;
   border: 1px solid #bcbdc0;
-  width: calc(100% - 160px);
+  width: calc(100%);
   position: relative;
   padding: 0 20px;
 }
