--- a/flask/templates/bot.html
+++ b/flask/templates/bot.html
@@ -62,7 +62,7 @@
                         scrolling="no" 
                         marginheight="0" 
                         marginwidth="0"
-                        src="https://www.google.com/maps/embed/v1/place?q=cassis" 
+                        src={{googleurl}}
                         allowfullscreen>
                         </iframe>
                     </div>
