--- a/flask/templates/bot.html
+++ b/flask/templates/bot.html
@@ -77,5 +77,18 @@
 
   </script>
       <script src="static/js/main.js"></script>
+<footer class="text-muted" style="
+    background-color: 394a6d;
+    border-radius: 3px;
+">
+      <div class="container" style="text-align:center">
+        
+        <p style="color:wheat">ChatBot Développé par Valentin Bus 
+        <a href="https://github.com/valentinbus/grandpy-bot" target="_blank">
+        <img src="../static/img/github.png" style="border-radius: 100%;height:30;margin-top: 5;margin-left: 10;"/>
+        </p>
+        </a>
+      </div>
+    </footer>
 </footer>
 </html>
