--- a/flask/templates/bot.html
+++ b/flask/templates/bot.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" type="text/css" href="static/css/article.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:300|Open+Sans:300|Oxygen|Material+Icons" rel="stylesheet">
-	<title>Chatbot FrontendS</title>
+	<title>GrandPy Bot</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 </head>
 
